# candybar

./: .copier-answers.yml  .gitignore  .gitmodules  .project.json  AGENTS.md  COORDINATION_REPORT.md  GOD.md  HANDOFF_SUMMARY.md  README_STORIES.md  app  components.json  index.html  mise.toml  package-lock.json  package.json  tailwind.config.js  test-config.json  vite.config.js  vite.config.ts
.bmad/: config.json  status.json
.github/workflows/: build-macos.yml
.next/: prerender-manifest.json  trace
.next/cache/: .rscinfo
.next/server/: server-reference-manifest.json
.next/static/chunks/: _error.js  app-pages-internals.js  react-refresh.js  webpack.js
.next/static/webpack/: webpack.3166dce57bf0795d.hot-update.js  webpack.f3cf18fb7ed20c78.hot-update.js
.swarm/: memory.db
agents/hermes/pm/: SOUL.md  hermes  role.yaml
docs/: IMPLEMENTATION_REPORT.md  QUICK_START.md  USER_GUIDE.md  architecture-candybar-2026-01-12.md  solutioning-gate-check-candybar-2026-01-12.md
phases_output/: final_analysis.md  metrics.md  phase1_discovery.md  phase2_planning.md  phase3_analysis.md  phase4_synthesis.md  phase5_consolidation.md
scripts/: stream-events.mjs
src/: App.tsx  index.css  main.js
src-next/: next-env.d.ts
src-next/app/: layout.tsx
src-next/components/: ModeToggle.tsx
src-next/components/AppLayout/: index.tsx  style.css
src-next/components/magicui/: border-beam.tsx  dot-pattern.tsx  number-ticker.tsx  shine-border.tsx
src-next/containers/Home/: index.tsx
src-next/css/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  rabbitmq.rs
src/components/: EventCloud.tsx  EventFilters.tsx  EventFlowDiagram.tsx  EventGraph.tsx  JsonViewer.tsx  ModeToggle.tsx  PerformanceMetrics.tsx
src/components/magicui/: border-beam.tsx  dot-pattern.tsx  shine-border.tsx
src/hooks/: useEventFiltering.ts  useRabbitMQ.ts
src/pages/: Home.tsx
src/types/: bloodbank.ts
(+13 files in other folders)
