[package]
name = "candybar"
version = "0.1.0"
description = "Bloodbank event observability for 33GOD"
authors = ["Jarad DeLorenzo"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9", features = ["custom-protocol"] }
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
tauri-plugin-shell = "2.3"
tauri-plugin-process = "2.3"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-notification = "2.3"
tauri-plugin-os = "2.3"
tauri-plugin-http = "2.5"

# RabbitMQ integration
lapin = "2.3"
tokio = { version = "1", features = ["full"] }
futures-lite = "2.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3"
