[package]
name = "candybar"
version = "0.1.0"
description = "Bloodbank event viewer"
authors = ["delorenj"]
edition = "2021"

[lib]
name = "candybar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-nats = "0.38"
once_cell = "1"
walkdir = "2"
futures-util = "0.3"
